--- a/tf114/Dockerfile
+++ b/tf114/Dockerfile
@@ -1,3 +1,8 @@
 FROM tensorflow/tensorflow:1.14.0-gpu-py3-jupyter
 RUN pip install --upgrade pip
+RUN pip install jupyter
+RUN pip install matplotlib
+RUN pip install sklearn
+RUN pip install segmentation-models
+RUN pip install opencv-python-headless
 RUN pip install jupyter -U && pip install jupyterlab
