feat: added docker GPU file

--- a/tf210/Dockerfile
+++ b/tf210/Dockerfile
@@ -1,9 +1,7 @@
-FROM tensorflow/tensorflow:1.14.0-gpu-py3-jupyter
+FROM tensorflow/tensorflow:latest-gpu-py3-jupyter
 RUN pip install --upgrade pip
 RUN pip install jupyter \
 matplotlib \
-sklearn \
+scikit-learn==0.23.2 \
 segmentation-models \
 opencv-python-headless 
-
-RUN pip install jupyter -U && pip install jupyterlab
